# doc-assistant

./: .env.example  .gitignore  README.md  agent_graph.py  app_streamlit.py  config.py  document_parser.py  llm_processor.py  memory_tree.py  middleware_config.py  paddle_ocr.py  pyproject.toml  rag_engine.py  setup.ps1  tools.py
