[project]
name = "trae-proj1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "gradio>=6.18.0",
    "langchain>=1.3.9",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchainhub>=0.1.21",
    "openai>=2.41.1",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
