[project]
name = "doc-assistant"
version = "0.2.0"
description = "文档智能助手 — 多文档上传、RAG 语义检索、对比分析、长期记忆"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.58",
    "langchain>=1.3",
    "langchain-core>=1.4",
    "langchain-community>=0.4",
    "langchain-deepseek>=1.1",
    "langchain-openai>=1.3",
    "langchain-text-splitters>=1.1",
    "langgraph>=1.2",
    "chromadb>=1.5",
    "dashscope>=1.25",
    "openai>=2.41",
    "paddleocr>=3.3",
    "paddlepaddle>=3.3",
    "numpy>=2.3",
    "pillow>=12.2",
    "pymupdf>=1.27",
    "pdfplumber>=0.11",
    "python-docx>=1.2",
    "python-dotenv>=1.2",
    "pydantic>=2.13",
    "duckduckgo-search>=8.1",
    "requests>=2.34",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
