[project]
name = "doc-assistant"
version = "0.1.0"
description = "Document Intelligent Assistant"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "chromadb>=1.5",
    "dashscope>=1.25",
    "duckduckgo-search>=8.1",
    "langchain>=1.3",
    "langchain-community>=0.4",
    "langchain-core>=1.3",
    "langchain-deepseek>=1.1",
    "langchain-openai>=1.3",
    "langchain-text-splitters>=1.0",
    "langgraph>=1.2",
    "numpy>=1.24",
    "onnxruntime>=1.14",
    "openai>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pdfplumber>=0.11",
    "pillow>=10.0",
    "pymupdf>=1.27",
    "python-docx>=1.2",
    "python-dotenv>=1.2",
    "pydantic>=2.0",
    "rapidocr-onnxruntime>=1.3",
    "requests>=2.34",
    "streamlit>=1.58",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[tool.uv]
index-strategy = "unsafe-best-match"
